tests/diagnostics/file_roles/export_declarations/in_test/expect.txt
# exit: 1
input/lib.test.coppice:1:1: error: export declarations are only allowed in PACKAGE.coppice
  export { Token }
  ^
